--- a/style.css
+++ b/style.css
@@ -1,1 +1,643 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap%27');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    scroll-behavior: smooth;
+}
+
+body{
+    width: 100%;
+    height: auto;
+    background-color:black ;
+    overflow-x: hidden;
+}
+
+/* Custom Scroll Bar */
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background: #b74b4b;
+    border-radius: 12px;
+    transition: all 0.3s ease;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: #b74b4b;
+}
+
+/* navigation bar */
+nav{
+    width: 100%;
+    height: 10vh;
+}
+
+.nav-container{
+    width: 100%;
+    height:100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo{
+    color: whitesmoke;
+    font-size: 2rem;
+    font-weight:bold;
+}
+
+.logo span{
+    color: #b74b4b;;
+}
+
+.hamburg, .cancel{
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: whitesmoke;
+    opacity: 0;
+    pointer-events: none;
+    font-size: clamp(2.5rem, 0.5rem + 3vw, 3rem) ;
+}
+
+.nav-container .links{
+    display: flex;
+}
+
+.nav-container .links a{
+    position: relative;
+    font-size: 1.3rem;
+    color: whitesmoke;
+    margin: 0 20px;
+    text-decoration: none;
+    font-weight: 550;
+    transition: 0.3s linear;
+}
+
+.nav-container .links a::before{
+    position: absolute;
+    content: "";
+    bottom: -3px;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    background-color: #b74b4b;
+    transition: 0.2s linear;
+}
+
+.nav-container .links a:hover::before{
+    width: 100%;
+}
+
+.nav-container .links a:hover{
+    color: #b74b4b;
+}
+
+.dropdown{
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    transform: translateY(-500px);
+    width: 100%;
+    height: auto ;
+    backdrop-filter: blur(4px) brightness(40%);
+    box-shadow: 0 0 20px black;
+    transition: 0.2s linear;
+}
+
+.dropdown .links a{
+    display: flex;
+    color: whitesmoke;
+    text-decoration: none;
+    justify-content: center;
+    padding: 15px 0;
+    align-items: center;
+    transition: 0.2s linear;
+}
+
+.dropdown .links a:hover{
+    background-color: #b74b4b;
+}
+
+section{
+    width: 100%;
+    min-height: 90vh;
+}
+
+section .main-container{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 100px;
+    align-items: center;
+}
+
+.main-container .image{
+    width: 550px;
+    height: 78vh;
+    border-radius: 100%;
+    overflow-y: hidden; 
+}
+
+.main-container .image img{
+    width: 100%;
+    scale: 1;
+}
+
+.main-container .image:hover{
+    animation: animate 1.5s ease-in-out;
+}
+
+@keyframes animate{
+    0%{
+        scale: 1;
+    }
+    50%{
+        scale:1.05;
+    }
+    100%{
+        scale: 1;
+    }
+}
+
+.main-container .content{
+    color: whitesmoke;
+    width: 40% ;
+}
+
+.content h1{
+    font-size: clamp(1rem, 1rem + 5vw, 2.5rem);
+}
+
+.content h1 span{
+    color: #b74b4b;
+}
+
+.content .typewriter{
+    font-size: clamp(1rem, 1rem + 5vw, 2.5rem);
+    font-weight: 600;
+}
+
+.content .typewriter-text{
+    color: #b74b4b;
+}
+
+.content p{
+    font-size: clamp(0.4rem, 0.2rem + 9vw, 1rem);
+    margin: 10px 0;
+    color: whitesmoke;
+}
+
+.social-links i{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    border: 0.2rem solid #b74b4b;
+    border-radius: 50%;
+    color: #b74b4b;
+    margin: 5px 15px;
+    font-size: 1.5rem;
+    transition: 0.2s linear;
+}
+
+.social-links i:hover{
+    scale: 1.3;
+    color: whitesmoke;
+    background-color: #b74b4b;
+    filter: drop-shadow(0 0 10px #b74b4b);
+}
+
+.content button{
+    width: 50%;
+    height: 6vh;
+    margin: 30px;
+    background-color: transparent;
+    color: #b74b4b;
+    border: none;
+    outline: none;
+    font-size: 120%;
+    font-weight: 700;
+    border: 2px solid #b74b4b;
+    border-radius: 4rem;
+    transition: 0.2s linear;
+}
+
+.content button:hover{
+    scale: 1.1;
+    color: whitesmoke;
+    border: 2px solid #b74b4b;
+    background-color: #b74b4b;
+    font-weight: 700;
+}
+
+section .content{
+    width: 80%;
+    margin: 0px auto;
+    font-family: "Poppins",sans-serif;
+}
+.about .about-details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+section .title{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+section .title span{
+    color: whitesmoke;
+    font-size: 30px;
+    font-weight: 600;
+    position: relative;
+    padding-bottom: 8px;
+}
+section .title span::before, section .title span::after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: #b74b4b;
+    left: 0;
+    bottom: 0;
+}
+section .title span::after{
+    bottom: -7px;
+    width: 70%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.about .about-details .left{
+    width: 45%;
+}
+.about .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 5px 50%;
+    position: relative;
+
+}
+.about-details .right{
+    width: 55%;
+}
+.right p span{
+    color: #b74b4b;
+}
+.about-details .right .exp-area{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    color: whitesmoke;
+}
+.exp-area .exp{
+    font-size: 1.2rem;
+}
+
+section.topic{
+    color: whitesmoke;
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.about-details .right p{
+    text-align: justify;
+    color: whitesmoke;
+}
+section .button{
+    margin: 1px 0;
+}
+section .button button{
+    width: fit-content;
+    border-radius: 10px;
+    padding: 1px 20px;
+    border-radius: 4rem;
+    font-size: 100%;
+    font-weight: 400;
+    background: transparent;
+    color: #b74b4b;
+    border: 2px solid #b74b4b;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    transform: translateX(-15%);
+}
+section .button button:hover{
+    border-color:#b74b4b;
+    background-color: #b74b4b;
+    color: whitesmoke;
+}
+
+.skills{
+    background: black;
+}
+.skills .content{
+    padding: 40px 0;
+}
+.skills .skills-details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.skills-details .text{
+    width: 50%;
+}
+.skills-details p{
+    color: whitesmoke;
+    text-align: justify;
+}
+.skills .skills-details .experience{
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+}
+.skills-details .experience .num{
+    color: whitesmoke;
+    font-size: 80px;
+}
+.skills-details .experience .exp{
+    color: whitesmoke;
+    margin-left: 20px;
+    font-size: 18px;
+    margin: 0 6px;
+}
+.skills-details .boxes{
+    width: 45%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: #b74b4b;
+}
+.skills-details .box{
+    width: calc(100% / 2 -20px);
+    margin: 20px  ;
+}
+.skills-details .boxes.topic{
+    font-size: 20px;
+    color: #b74b4b;
+
+}
+.skills-details .boxes .per{
+    font-size: 60px;
+    color: #b74b4b;
+}
+
+.services .boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.services .boxes .box{
+    margin: 20px 0;
+    width: calc(100% / 3 -20px);
+    text-align: center;
+    border-radius: 12px;
+    padding: 30px 10px;
+    box-shadow: 0 0px 10px 2px whitesmoke;
+    cursor: default;
+    color: white;
+    border: 1px solid white;
+    transition: all 0.4s ease;
+}
+
+.services .boxes .box:hover{
+    background: #b74b4b;
+    border: 1px solid #b74b4b;
+    color: white;
+    box-shadow: 0 0 30px 10px #b74b4b;
+}
+.services .boxes .box .icon{
+    height: 50px;
+    width: 50px;
+    background: #b74b4b;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    font-size: 18px;
+    color: #fff;
+    margin: 0 auto 10px auto;
+    transition: all 0.4s ease;
+}
+.boxes .box:hover .icon{
+    background-color: #fff;
+    color: #b74b4b;
+}
+.services .boxes .box:hover .topic, .services .boxes .boxes:hover p{
+    color: whitesmoke;
+    transition: all 0.4s ease;
+}
+
+.services .boxes .box:hover .topic, .services .boxes .box:hover p{
+    color: whitesmoke;
+}
+
+/* Contact Me */
+.contact{
+    background: black;
+}
+.contact .content{
+    margin: 0 auto;
+    padding: 30px 0 ;
+    display: flex;
+    flex-direction: column;
+     justify-content: center;
+     align-items: center;
+
+}
+.contact .text{
+    width: 20%;
+    text-align: center;
+    margin: auto;
+    color: whitesmoke;
+    font-size: 22px;
+}
+
+.contact .text p{
+    font-size: 22px;
+    color: whitesmoke;
+    text-align: center;
+}
+
+/* Responsive Design */
+
+@media(max-width: 768px){
+    .contact-form-container{
+        padding: 10px;
+    }
+}
+
+@media(max-width: 480px){
+    .contact-form h2{
+        font-size: 20px;
+    }
+
+    .contact-form{
+        padding: 0px;
+    }
+
+    .contact-btn{
+        font-size: 16px;
+    }
+}
+
+footer{
+    background: #b74b4b;
+    padding: 15px 0;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+}
+footer .text span{
+    font-size: 17px;
+    font-weight: 400;
+    color: #fff;
+}
+footer .text span a{
+    font-weight: 500;
+    color: #fff;
+}
+footer .text span a:hover{
+    text-decoration: underline;
+}
+
+.scroll-button a{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: whitesmoke;
+    background: #b74b4b;
+    padding: 7px 12px;
+    font-size: 18px;
+    border-radius: 6px;
+    display: none;
+}
+
+@media(max-width: 1000px){
+    .about .about-details{
+        justify-content: center;
+        flex-direction: column;
+    }
+    .about .about-details .left{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .about-details .right{
+        width: 90%;
+        margin: 40px 0;
+    }
+    .services .boxes .box{
+        margin: 20px 0;
+        width: calc(100% / 2 -20px);
+    }
+}
+
+@media(max-width:900px){
+    .about .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media(max-width: 968px){
+
+    nav .logo{
+        position: absolute;
+        top: 16px;
+        left: 15px;
+        font-size: 1.5rem;
+    }
+
+    section .main-container{
+        padding-left: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-container .links{
+        display: none;
+    }
+    .hamburg, .cancel{
+        opacity: 1;
+    }
+
+    .main-container .content{
+        margin-top: 20px;
+        width: 80%;
+    }
+
+    .social-links i{
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 1.5rem;
+    }
+
+    .main-container .image{
+        z-index: -1;
+        width: 50%;
+        height: 60%;
+    }
+
+    .skills .skills-details{
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .skills-details .text{
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .skills-details .boxes{
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .services .boxes .box{
+        margin: 20px 0; 
+        width: 100%;
+    }
+    .contact .text{
+        width: 100%;
+    }
+}
+
+@media(max-width:500px){
+    .main-container .image{
+        width: 50%;
+        height: 60%;
+        margin-bottom: 0px;
+    }
+
+    .main-container .content{
+        width: 80%;
+    }
+
+    .main-container button{
+        margin-top: 15px;
+    }
+
+    .skills-details .boxes .per{
+        font-size: 50px;
+        color: #b74b4b;
+    }
+
+    .about-img img{
+        text-align: center;
+        width: 100%;
+        height: 300px;
+        max-width: 300px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: auto;
+    }
+}
