--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ nav{
     color: #b74b4b;;
 }
 
-.hamburg, .cancel{
+.hamburg, 
+.cancel {
     cursor: pointer;
     position: absolute;
     right: 15px;
